--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/native-stack": "^7.3.21",
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
-    "expo": "~53.0.12",
+    "expo": "^54.0.23",
     "expo-av": "^15.1.7",
     "expo-image-picker": "^16.1.4",
     "expo-location": "^18.1.5",
