--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "^54.0.23",
     "expo-av": "^15.1.7",
     "expo-image-picker": "^16.1.4",
+    "expo-linear-gradient": "^15.0.7",
     "expo-location": "^18.1.5",
     "expo-status-bar": "~2.2.3",
     "expo-video-thumbnails": "^9.1.3",
