Update app.json with iOS and Android configuration details, including bundle identifier and package name. Add new eas.json file for EAS build and submission settings.

--- a/app.json
+++ b/app.json
@@ -13,14 +13,19 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.emmallob14.talklowkey",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.emmallob14.talklowkey"
     },
     "web": {
       "favicon": "./assets/favicon.png"
