--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.10.0",
     "expo": "^54.0.23",
     "expo-av": "^15.1.7",
+    "expo-blur": "^15.0.7",
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^15.0.7",
     "expo-location": "^18.1.5",
